# segtformats

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
doc/: formats_diagram.dia  seg_schema.json
src/segtformats/: __init__.py  __main__.py  alto_to_json.py  alto_to_page_xml.py  any_to_json.py  anyseg_doctor.py  anyseg_to_ascii.py  anyseg_to_json.py  json_doctor.py  json_to_json.py  json_to_page.py  json_to_page_xml.py  page_xml_split.py  page_xml_to_json.py  segtformat_documents.py  segtformats.py
src/segtformats/libs/: segformat_documents.py  segformats.py
tests/: test_segtformats.py
tests/data/: 128_2c1ea_default.json  217_d9c7f_default.json  217_d9c7f_default.page.xml  2923.xml  f.186r.json  not_a_valid_segmentation_format.json
