[project]
name = "segtformats"
version = "0.2"
authors = [
  { name="Nicolas Renet", email="nprenet@gmail.com" },
]
description = "Segmentation data formats: conversion tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: Posix :: Linux",
]

license="MIT"
license-files=["LICENSE"]

dependencies = [ 
	"numpy",
	"unidecode",
	"shapely",
	"jsonschema",
	"lxml",
	"fargv",
]

[project.urls]
Homepage = "https://github.com/nicolasrenet/segtformats"

[project.scripts]
alto_to_json = "segtformats.alto_to_json:main"
alto_to_page_xml = "segtformats.alto_to_page_xml:main"
page_xml_to_json = "segtformats.page_xml_to_json:main"
json_to_page_xml = "segtformats.json_to_page_xml:main"
anyseg_to_ascii = "segtformats.anyseg_to_ascii:main"
anyseg_to_json = "segtformats.anyseg_to_json:main"
json_doctor = "segtformats.json_doctor:main"
anyseg_doctor = "segtformats.anyseg_doctor:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

